gke/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pos-ticket-system-backend-svc
  annotations:
    cloud.google.com/backend-config: '{"ports": {"3000":"pos-ticket-system-backend-backendconfig"}}'
spec:
  type: NodePort
  selector:
    app: pos-ticket-system-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
