gke/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-ticket-system-backend-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: pos-static-ip
    networking.gke.io/managed-certificates: pos-ticket-system-backend-managedcert
spec:
  defaultBackend:
    service:
      name: pos-ticket-system-backend-svc
      port:
        number: 3000
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: pos-ticket-system-backend-svc
              port:
                number: 3000
